Added perm nav locators & methods to abstract class. They current expect a driver added.

--- a/PrimeService.Tests/Reports/dashboard.html
+++ b/PrimeService.Tests/Reports/dashboard.html
@@ -50,7 +50,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">5/4/2020 12:03:13 AM</span>
+                    <span class="badge badge-primary">5/4/2020 1:04:44 PM</span>
                 </a>
             </li>
         </ul>
@@ -140,7 +140,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Start</p>
-													<h6 class="font-weight-light">5/4/2020 12:03:13 AM</h6>
+													<h6 class="font-weight-light">5/4/2020 1:04:44 PM</h6>
 													<span class="text-semibold text-success font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -156,7 +156,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">End</p>
-													<h6 class="font-weight-light">5/4/2020 12:03:39 AM</h6>
+													<h6 class="font-weight-light">5/4/2020 1:05:13 PM</h6>
 													<span class="text-semibold text-danger font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -172,7 +172,7 @@
 	                                        <div class="media justify-content-between">
 												<div>
 													<p class="">Duration</p>
-													<h6 class="font-weight-light">00:00:26.2274671</h6>
+													<h6 class="font-weight-light">00:00:29.0503126</h6>
 													<span class="text-semibold font-size-15">
 												</div>
 												<div class="align-self-end">
@@ -268,7 +268,7 @@
 			};
 		</script>
 			<script>
-				var timeline = { "test_invalidLogin":3.8023395,"test_validLogin":2.5391027 };
+				var timeline = { "test_invalidLogin":4.2843649,"test_validLogin":2.7983066 };
 			</script>
 		<script type='text/javascript'>
 	
