--- a/PrimeService.Tests/Reports/index.html
+++ b/PrimeService.Tests/Reports/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">5/4/2020 12:03:13 AM</span>
+                    <span class="badge badge-primary">5/4/2020 1:04:44 PM</span>
                 </a>
             </li>
         </ul>
@@ -122,8 +122,8 @@
 											<div class="open-test">
 												<div class="test-detail"> 
 													<p class="name">test_invalidLogin</p> 
-													<p class="duration text-sm">0h:0m:3s+802ms</p> 
-													<span class="datetime">00:03:19 AM</span>
+													<p class="duration text-sm">0h:0m:4s+284ms</p> 
+													<span class="datetime">13:04:50 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
@@ -131,9 +131,9 @@
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
 															<h5 class="test-status text-fail">test_invalidLogin</h5>
-															<span class='badge badge-success'>5/4/2020 12:03:19 AM</span>
-															<span class='badge badge-danger'>5/4/2020 12:03:23 AM</span>
-															<span class='badge badge-default'>0h:0m:3s+802ms</span>
+															<span class='badge badge-success'>5/4/2020 1:04:50 PM</span>
+															<span class='badge badge-danger'>5/4/2020 1:04:54 PM</span>
+															<span class='badge badge-default'>0h:0m:4s+284ms</span>
 														</div>
 																											</div>
 												</div>
@@ -148,19 +148,19 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>00:03:23</td>
+				<td>13:04:54</td>
 				<td>
 Fail									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>00:03:23</td>
+				<td>13:04:54</td>
 				<td>
 Snapshot below: AventStack.ExtentReports.ExtentTest									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>00:03:23</td>
+				<td>13:04:54</td>
 				<td>
 Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowOnError(Response errorResponse)
    at OpenQA.Selenium.Remote.RemoteWebDriver.Execute(String driverCommandToExecute, Dictionary`2 parameters)
@@ -169,8 +169,8 @@ Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowO
    at OpenQA.Selenium.By.<>c__DisplayClass19_0.<XPath>b__0(ISearchContext context)
    at OpenQA.Selenium.By.FindElement(ISearchContext context)
    at OpenQA.Selenium.Remote.RemoteWebDriver.FindElement(By by)
-   at PrimeService.Tests.PageMethods.LoginPage.goToToggleMenu() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\PageMethods\LoginPage.cs:line 30
-   at PrimeService.Tests.TestCases.LoginTest.test_invalidLogin() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\TestCases\LoginTest.cs:line 37									</td>
+   at PrimeService.Tests.PageMethods.LoginPage.goToToggleMenu() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\pom\LoginPage.cs:line 30
+   at PrimeService.Tests.TestCases.LoginTest2.test_invalidLogin() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\TestCases\LoginTest2.cs:line 37									</td>
 			</tr>
 	</tbody>
 </table>
@@ -179,12 +179,12 @@ Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowO
 <div class="detail-foot">
 	<ul class="attachments">
 		<li>
-			<a href="Screenshots\Screenshot_12_03_22.png" data-featherlight="image">
+			<a href="Screenshots\Screenshot_1_04_53.png" data-featherlight="image">
 				<div class="file-icon">
 					<i class="fa fa-file-image-o"></i> 
 				</div>
 				<div class="file-info">
-		                <span class="file-name">Screenshot_12_03_22.png</span>
+		                <span class="file-name">Screenshot_1_04_53.png</span>
 		                <span class="file-size"> 0Kb</span>
 				</div>
 			</a>
@@ -200,8 +200,8 @@ Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowO
 											<div class="open-test">
 												<div class="test-detail"> 
 													<p class="name">test_validLogin</p> 
-													<p class="duration text-sm">0h:0m:2s+539ms</p> 
-													<span class="datetime">00:03:36 AM</span>
+													<p class="duration text-sm">0h:0m:2s+798ms</p> 
+													<span class="datetime">13:05:09 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
@@ -209,9 +209,9 @@ Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowO
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
 															<h5 class="test-status text-fail">test_validLogin</h5>
-															<span class='badge badge-success'>5/4/2020 12:03:36 AM</span>
-															<span class='badge badge-danger'>5/4/2020 12:03:39 AM</span>
-															<span class='badge badge-default'>0h:0m:2s+539ms</span>
+															<span class='badge badge-success'>5/4/2020 1:05:09 PM</span>
+															<span class='badge badge-danger'>5/4/2020 1:05:12 PM</span>
+															<span class='badge badge-default'>0h:0m:2s+798ms</span>
 														</div>
 																											</div>
 												</div>
@@ -226,19 +226,19 @@ Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowO
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>00:03:39</td>
+				<td>13:05:12</td>
 				<td>
 Fail									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>00:03:39</td>
+				<td>13:05:12</td>
 				<td>
 Snapshot below: AventStack.ExtentReports.ExtentTest									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>00:03:39</td>
+				<td>13:05:12</td>
 				<td>
 Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowOnError(Response errorResponse)
    at OpenQA.Selenium.Remote.RemoteWebDriver.Execute(String driverCommandToExecute, Dictionary`2 parameters)
@@ -247,8 +247,8 @@ Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowO
    at OpenQA.Selenium.By.<>c__DisplayClass19_0.<XPath>b__0(ISearchContext context)
    at OpenQA.Selenium.By.FindElement(ISearchContext context)
    at OpenQA.Selenium.Remote.RemoteWebDriver.FindElement(By by)
-   at PrimeService.Tests.PageMethods.LoginPage.goToToggleMenu() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\PageMethods\LoginPage.cs:line 30
-   at PrimeService.Tests.TestCases.LoginTest.test_validLogin() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\TestCases\LoginTest.cs:line 23									</td>
+   at PrimeService.Tests.PageMethods.LoginPage.goToToggleMenu() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\pom\LoginPage.cs:line 30
+   at PrimeService.Tests.TestCases.LoginTest2.test_validLogin() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\TestCases\LoginTest2.cs:line 23									</td>
 			</tr>
 	</tbody>
 </table>
@@ -257,12 +257,12 @@ Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowO
 <div class="detail-foot">
 	<ul class="attachments">
 		<li>
-			<a href="Screenshots\Screenshot_12_03_37.png" data-featherlight="image">
+			<a href="Screenshots\Screenshot_1_05_11.png" data-featherlight="image">
 				<div class="file-icon">
 					<i class="fa fa-file-image-o"></i> 
 				</div>
 				<div class="file-info">
-		                <span class="file-name">Screenshot_12_03_37.png</span>
+		                <span class="file-name">Screenshot_1_05_11.png</span>
 		                <span class="file-size"> 0Kb</span>
 				</div>
 			</a>
