--- a/PrimeService.Tests/Reports/index.html
+++ b/PrimeService.Tests/Reports/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">5/4/2020 1:04:44 PM</span>
+                    <span class="badge badge-primary">5/6/2020 10:43:54 PM</span>
                 </a>
             </li>
         </ul>
@@ -107,7 +107,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -115,25 +115,25 @@
                             </div>
                             <div class="test-list-wrapper scrollable">
                                 <ul class="test-list-item">
-										<li class="test-item" status="fail" author="" device="" tag=""> 
-											<div class="status-avatar fail-bg">
-												<i class="fa fa-times text-white"></i>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">test_invalidLogin</p> 
-													<p class="duration text-sm">0h:0m:4s+284ms</p> 
-													<span class="datetime">13:04:50 PM</span>
+													<p class="name">Wish_List_flow___2_products</p> 
+													<p class="duration text-sm">0h:0m:11s+190ms</p> 
+													<span class="datetime">22:43:59 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-fail">test_invalidLogin</h5>
-															<span class='badge badge-success'>5/4/2020 1:04:50 PM</span>
-															<span class='badge badge-danger'>5/4/2020 1:04:54 PM</span>
-															<span class='badge badge-default'>0h:0m:4s+284ms</span>
+															<h5 class="test-status text-pass">Wish_List_flow___2_products</h5>
+															<span class='badge badge-success'>5/6/2020 10:43:59 PM</span>
+															<span class='badge badge-danger'>5/6/2020 10:44:10 PM</span>
+															<span class='badge badge-default'>0h:0m:11s+190ms</span>
 														</div>
 																											</div>
 												</div>
@@ -147,128 +147,15 @@
 	</tr></thead>
 	<tbody>
 			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>13:04:54</td>
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>22:44:10</td>
 				<td>
-Fail									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>13:04:54</td>
-				<td>
-Snapshot below: AventStack.ExtentReports.ExtentTest									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>13:04:54</td>
-				<td>
-Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowOnError(Response errorResponse)
-   at OpenQA.Selenium.Remote.RemoteWebDriver.Execute(String driverCommandToExecute, Dictionary`2 parameters)
-   at OpenQA.Selenium.Remote.RemoteWebDriver.FindElement(String mechanism, String value)
-   at OpenQA.Selenium.Remote.RemoteWebDriver.FindElementByXPath(String xpath)
-   at OpenQA.Selenium.By.<>c__DisplayClass19_0.<XPath>b__0(ISearchContext context)
-   at OpenQA.Selenium.By.FindElement(ISearchContext context)
-   at OpenQA.Selenium.Remote.RemoteWebDriver.FindElement(By by)
-   at PrimeService.Tests.PageMethods.LoginPage.goToToggleMenu() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\pom\LoginPage.cs:line 30
-   at PrimeService.Tests.TestCases.LoginTest2.test_invalidLogin() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\TestCases\LoginTest2.cs:line 37									</td>
+Test ended with Pass									</td>
 			</tr>
 	</tbody>
 </table>
 
 </div>    
-<div class="detail-foot">
-	<ul class="attachments">
-		<li>
-			<a href="Screenshots\Screenshot_1_04_53.png" data-featherlight="image">
-				<div class="file-icon">
-					<i class="fa fa-file-image-o"></i> 
-				</div>
-				<div class="file-info">
-		                <span class="file-name">Screenshot_1_04_53.png</span>
-		                <span class="file-size"> 0Kb</span>
-				</div>
-			</a>
-		</li>
-	</ul>
-</div>
-											</div>
-										</li>
-										<li class="test-item" status="fail" author="" device="" tag=""> 
-											<div class="status-avatar fail-bg">
-												<i class="fa fa-times text-white"></i>
-											</div>
-											<div class="open-test">
-												<div class="test-detail"> 
-													<p class="name">test_validLogin</p> 
-													<p class="duration text-sm">0h:0m:2s+798ms</p> 
-													<span class="datetime">13:05:09 PM</span>
-												</div>
-											</div>
-											<div class="test-contents d-none">
-												<div class="detail-head">
-													<div class="p-v-10 d-inline-block">	
-														<div class="info">
-															<h5 class="test-status text-fail">test_validLogin</h5>
-															<span class='badge badge-success'>5/4/2020 1:05:09 PM</span>
-															<span class='badge badge-danger'>5/4/2020 1:05:12 PM</span>
-															<span class='badge badge-default'>0h:0m:2s+798ms</span>
-														</div>
-																											</div>
-												</div>
-<div class="detail-body mt-4">												
-	
-<table class="table table-sm">
-	<thead><tr>
-		<th class="status-col">Status</th>
-		<th class="timestamp-col">Timestamp</th>
-		<th class="details-col">Details</th>
-	</tr></thead>
-	<tbody>
-			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>13:05:12</td>
-				<td>
-Fail									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>13:05:12</td>
-				<td>
-Snapshot below: AventStack.ExtentReports.ExtentTest									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>13:05:12</td>
-				<td>
-Test ended with Fail   at OpenQA.Selenium.Remote.RemoteWebDriver.UnpackAndThrowOnError(Response errorResponse)
-   at OpenQA.Selenium.Remote.RemoteWebDriver.Execute(String driverCommandToExecute, Dictionary`2 parameters)
-   at OpenQA.Selenium.Remote.RemoteWebDriver.FindElement(String mechanism, String value)
-   at OpenQA.Selenium.Remote.RemoteWebDriver.FindElementByXPath(String xpath)
-   at OpenQA.Selenium.By.<>c__DisplayClass19_0.<XPath>b__0(ISearchContext context)
-   at OpenQA.Selenium.By.FindElement(ISearchContext context)
-   at OpenQA.Selenium.Remote.RemoteWebDriver.FindElement(By by)
-   at PrimeService.Tests.PageMethods.LoginPage.goToToggleMenu() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\pom\LoginPage.cs:line 30
-   at PrimeService.Tests.TestCases.LoginTest2.test_validLogin() in C:\GitDesktop\GitLabWeb\PrimeService.Tests\TestCases\LoginTest2.cs:line 23									</td>
-			</tr>
-	</tbody>
-</table>
-
-</div>    
-<div class="detail-foot">
-	<ul class="attachments">
-		<li>
-			<a href="Screenshots\Screenshot_1_05_11.png" data-featherlight="image">
-				<div class="file-icon">
-					<i class="fa fa-file-image-o"></i> 
-				</div>
-				<div class="file-info">
-		                <span class="file-name">Screenshot_1_05_11.png</span>
-		                <span class="file-size"> 0Kb</span>
-				</div>
-			</a>
-		</li>
-	</ul>
-</div>
 											</div>
 										</li>
                                 </ul>    
